# Imu_Integrator

./: .gitignore  CMakeLists.txt  README.md
Imu_Integrator/: CMakeLists.txt
Imu_Integrator/include/: Imu_Integrator.h
Imu_Integrator/src/: Imu_Integrator.cpp
Imu_Sensor/: CMakeLists.txt
Imu_Sensor/include/: REG.h  serial.h
Imu_Sensor/src/: serial.c  wit_c_sdk.c
app/: CMakeLists.txt  main.cpp
